--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -648,14 +648,27 @@ spec:
                         description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                         type: string
                     type: object
+                  finished:
+                    type: boolean
                   mode:
                     description: WorkflowMode describes the mode of workflow
+                    type: string
+                  startTime:
+                    format: date-time
                     type: string
                   steps:
                     items:
                       description: WorkflowStepStatus record the status of a workflow step
                       properties:
+                        firstExecuteTime:
+                          description: FirstExecuteTime is the first time this step execution.
+                          format: date-time
+                          type: string
                         id:
+                          type: string
+                        lastExecuteTime:
+                          description: LastExecuteTime is the last time this step execution.
+                          format: date-time
                           type: string
                         message:
                           description: A human readable message indicating details about why the workflowStep is in this state.
@@ -703,7 +716,9 @@ spec:
                         type:
                           type: string
                       required:
+                      - firstExecuteTime
                       - id
+                      - lastExecuteTime
                       type: object
                     type: array
                   suspend:
@@ -711,7 +726,9 @@ spec:
                   terminated:
                     type: boolean
                 required:
+                - finished
                 - mode
+                - startTime
                 - suspend
                 - terminated
                 type: object
@@ -1441,14 +1458,27 @@ spec:
                         description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                         type: string
                     type: object
+                  finished:
+                    type: boolean
                   mode:
                     description: WorkflowMode describes the mode of workflow
+                    type: string
+                  startTime:
+                    format: date-time
                     type: string
                   steps:
                     items:
                       description: WorkflowStepStatus record the status of a workflow step
                       properties:
+                        firstExecuteTime:
+                          description: FirstExecuteTime is the first time this step execution.
+                          format: date-time
+                          type: string
                         id:
+                          type: string
+                        lastExecuteTime:
+                          description: LastExecuteTime is the last time this step execution.
+                          format: date-time
                           type: string
                         message:
                           description: A human readable message indicating details about why the workflowStep is in this state.
@@ -1496,7 +1526,9 @@ spec:
                         type:
                           type: string
                       required:
+                      - firstExecuteTime
                       - id
+                      - lastExecuteTime
                       type: object
                     type: array
                   suspend:
@@ -1504,7 +1536,9 @@ spec:
                   terminated:
                     type: boolean
                 required:
+                - finished
                 - mode
+                - startTime
                 - suspend
                 - terminated
                 type: object
