--- a/vela-templates/addons/fluxcd/resource/crds/helm-release.yaml
+++ b/vela-templates/addons/fluxcd/resource/crds/helm-release.yaml
@@ -206,7 +206,7 @@ spec:
                     replace:
                       description: Replace tells the Helm install action to re-use the
                         'ReleaseName', but only if that name is a deleted release which
-                        remains in the history.
+                        remains in the recorder.
                       type: boolean
                     skipCRDs:
                       description: "SkipCRDs tells the Helm install action to not install
@@ -470,7 +470,7 @@ spec:
                       type: boolean
                     keepHistory:
                       description: KeepHistory tells Helm to remove all associated resources
-                        and mark the release as deleted, but retain the release history.
+                        and mark the release as deleted, but retain the release recorder.
                       type: boolean
                     timeout:
                       description: Timeout is the time to wait for any individual Kubernetes
