--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
@@ -882,15 +882,30 @@ spec:
                         description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                         type: string
                     type: object
+                  finished:
+                    type: boolean
                   mode:
                     description: WorkflowMode describes the mode of workflow
+                    type: string
+                  startTime:
+                    format: date-time
                     type: string
                   steps:
                     items:
                       description: WorkflowStepStatus record the status of a workflow
                         step
                       properties:
+                        firstExecuteTime:
+                          description: FirstExecuteTime is the first time this step
+                            execution.
+                          format: date-time
+                          type: string
                         id:
+                          type: string
+                        lastExecuteTime:
+                          description: LastExecuteTime is the last time this step
+                            execution.
+                          format: date-time
                           type: string
                         message:
                           description: A human readable message indicating details
@@ -948,7 +963,9 @@ spec:
                         type:
                           type: string
                       required:
+                      - firstExecuteTime
                       - id
+                      - lastExecuteTime
                       type: object
                     type: array
                   suspend:
@@ -956,7 +973,9 @@ spec:
                   terminated:
                     type: boolean
                 required:
+                - finished
                 - mode
+                - startTime
                 - suspend
                 - terminated
                 type: object
@@ -1940,15 +1959,30 @@ spec:
                         description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                         type: string
                     type: object
+                  finished:
+                    type: boolean
                   mode:
                     description: WorkflowMode describes the mode of workflow
+                    type: string
+                  startTime:
+                    format: date-time
                     type: string
                   steps:
                     items:
                       description: WorkflowStepStatus record the status of a workflow
                         step
                       properties:
+                        firstExecuteTime:
+                          description: FirstExecuteTime is the first time this step
+                            execution.
+                          format: date-time
+                          type: string
                         id:
+                          type: string
+                        lastExecuteTime:
+                          description: LastExecuteTime is the last time this step
+                            execution.
+                          format: date-time
                           type: string
                         message:
                           description: A human readable message indicating details
@@ -2006,7 +2040,9 @@ spec:
                         type:
                           type: string
                       required:
+                      - firstExecuteTime
                       - id
+                      - lastExecuteTime
                       type: object
                     type: array
                   suspend:
@@ -2014,7 +2050,9 @@ spec:
                   terminated:
                     type: boolean
                 required:
+                - finished
                 - mode
+                - startTime
                 - suspend
                 - terminated
                 type: object
