--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_initializers.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_initializers.yaml
@@ -1085,15 +1085,30 @@ spec:
                                 description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                                 type: string
                             type: object
+                          finished:
+                            type: boolean
                           mode:
                             description: WorkflowMode describes the mode of workflow
+                            type: string
+                          startTime:
+                            format: date-time
                             type: string
                           steps:
                             items:
                               description: WorkflowStepStatus record the status of
                                 a workflow step
                               properties:
+                                firstExecuteTime:
+                                  description: FirstExecuteTime is the first time
+                                    this step execution.
+                                  format: date-time
+                                  type: string
                                 id:
+                                  type: string
+                                lastExecuteTime:
+                                  description: LastExecuteTime is the last time this
+                                    step execution.
+                                  format: date-time
                                   type: string
                                 message:
                                   description: A human readable message indicating
@@ -1154,7 +1169,9 @@ spec:
                                 type:
                                   type: string
                               required:
+                              - firstExecuteTime
                               - id
+                              - lastExecuteTime
                               type: object
                             type: array
                           suspend:
@@ -1162,7 +1179,9 @@ spec:
                           terminated:
                             type: boolean
                         required:
+                        - finished
                         - mode
+                        - startTime
                         - suspend
                         - terminated
                         type: object
