--- a/charts/vela-core/templates/addons/terraform-provider-aws.yaml
+++ b/charts/vela-core/templates/addons/terraform-provider-aws.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 data:
-  initializer: |
+  application: |
     apiVersion: core.oam.dev/v1beta1
-    kind: Initializer
+    kind: Application
     metadata:
       annotations:
         addons.oam.dev/description: Kubernetes Terraform Controller for AWS
@@ -10,43 +10,39 @@ data:
       name: terraform-provider-aws
       namespace: default
     spec:
-      appTemplate:
-        spec:
-          components:
-          - name: aws-account-creds
-            properties:
-              apiVersion: v1
-              kind: Secret
-              metadata:
+      components:
+      - name: aws-account-creds
+        properties:
+          apiVersion: v1
+          kind: Secret
+          metadata:
+            name: aws-account-creds
+            namespace: vela-system
+          stringData:
+            credentials: |
+              awsAccessKeyID: [[ index .Args "AWS_ACCESS_KEY_ID" ]]
+              awsSecretAccessKey: [[ index .Args "AWS_SECRET_ACCESS_KEY" ]]
+              awsSessionToken: [[ index .Args "AWS_SESSION_TOKEN" ]]
+          type: Opaque
+        type: raw
+      - name: aws
+        properties:
+          apiVersion: terraform.core.oam.dev/v1beta1
+          kind: Provider
+          metadata:
+            name: aws
+            namespace: default
+          spec:
+            credentials:
+              secretRef:
+                key: credentials
                 name: aws-account-creds
                 namespace: vela-system
-              stringData:
-                credentials: |
-                  awsAccessKeyID: [[ index .Args "AWS_ACCESS_KEY_ID" ]]
-                  awsSecretAccessKey: [[ index .Args "AWS_SECRET_ACCESS_KEY" ]]
-                  awsSessionToken: [[ index .Args "AWS_SESSION_TOKEN" ]]
-              type: Opaque
-            type: raw
-          - name: aws
-            properties:
-              apiVersion: terraform.core.oam.dev/v1beta1
-              kind: Provider
-              metadata:
-                name: aws
-                namespace: default
-              spec:
-                credentials:
-                  secretRef:
-                    key: credentials
-                    name: aws-account-creds
-                    namespace: vela-system
-                  source: Secret
-                provider: aws
-                region: '[[ index .Args "AWS_REGION" ]]'
-            type: raw
+              source: Secret
+            provider: aws
+            region: '[[ index .Args "AWS_REGION" ]]'
+        type: raw
         status: {}
-    status:
-      observedGeneration: 0
 kind: ConfigMap
 metadata:
   annotations:
