--- a/charts/vela-core/templates/addons/terraform-provider-ec.yaml
+++ b/charts/vela-core/templates/addons/terraform-provider-ec.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 data:
-  initializer: |
+  application: |
     apiVersion: core.oam.dev/v1beta1
-    kind: Initializer
+    kind: Application
     metadata:
       annotations:
         addons.oam.dev/description: Kubernetes Terraform Controller for EC
@@ -10,40 +10,36 @@ data:
       name: terraform-provider-ec
       namespace: default
     spec:
-      appTemplate:
-        spec:
-          components:
-          - name: ec-account-creds
-            properties:
-              apiVersion: v1
-              kind: Secret
-              metadata:
+      components:
+      - name: ec-account-creds
+        properties:
+          apiVersion: v1
+          kind: Secret
+          metadata:
+            name: ec-account-creds
+            namespace: vela-system
+          stringData:
+            credentials: |
+              ecApiKey: [[ index .Args "EC_API_KEY" ]]
+          type: Opaque
+        type: raw
+      - name: ec
+        properties:
+          apiVersion: terraform.core.oam.dev/v1beta1
+          kind: Provider
+          metadata:
+            name: ec
+            namespace: default
+          spec:
+            credentials:
+              secretRef:
+                key: credentials
                 name: ec-account-creds
                 namespace: vela-system
-              stringData:
-                credentials: |
-                  ecApiKey: [[ index .Args "EC_API_KEY" ]]
-              type: Opaque
-            type: raw
-          - name: ec
-            properties:
-              apiVersion: terraform.core.oam.dev/v1beta1
-              kind: Provider
-              metadata:
-                name: ec
-                namespace: default
-              spec:
-                credentials:
-                  secretRef:
-                    key: credentials
-                    name: ec-account-creds
-                    namespace: vela-system
-                  source: Secret
-                provider: ec
-            type: raw
+              source: Secret
+            provider: ec
+        type: raw
         status: {}
-    status:
-      observedGeneration: 0
 kind: ConfigMap
 metadata:
   annotations:
