--- a/charts/vela-core/templates/addons/terraform-provider-gcp.yaml
+++ b/charts/vela-core/templates/addons/terraform-provider-gcp.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 data:
-  initializer: |
+  application: |
     apiVersion: core.oam.dev/v1beta1
-    kind: Initializer
+    kind: Application
     metadata:
       annotations:
         addons.oam.dev/description: Kubernetes Terraform Controller for GCP
@@ -10,42 +10,38 @@ data:
       name: terraform-provider-gcp
       namespace: default
     spec:
-      appTemplate:
-        spec:
-          components:
-          - name: gcp-account-creds
-            properties:
-              apiVersion: v1
-              kind: Secret
-              metadata:
+      components:
+      - name: gcp-account-creds
+        properties:
+          apiVersion: v1
+          kind: Secret
+          metadata:
+            name: gcp-account-creds
+            namespace: vela-system
+          stringData:
+            credentials: |
+              gcpCredentialsJSON: [[ index .Args "GOOGLE_CREDENTIALS" ]]
+              gcpProject: [[ index .Args "GOOGLE_PROJECT" ]]
+          type: Opaque
+        type: raw
+      - name: gcp
+        properties:
+          apiVersion: terraform.core.oam.dev/v1beta1
+          kind: Provider
+          metadata:
+            name: gcp
+            namespace: default
+          spec:
+            credentials:
+              secretRef:
+                key: credentials
                 name: gcp-account-creds
                 namespace: vela-system
-              stringData:
-                credentials: |
-                  gcpCredentialsJSON: [[ index .Args "GOOGLE_CREDENTIALS" ]]
-                  gcpProject: [[ index .Args "GOOGLE_PROJECT" ]]
-              type: Opaque
-            type: raw
-          - name: gcp
-            properties:
-              apiVersion: terraform.core.oam.dev/v1beta1
-              kind: Provider
-              metadata:
-                name: gcp
-                namespace: default
-              spec:
-                credentials:
-                  secretRef:
-                    key: credentials
-                    name: gcp-account-creds
-                    namespace: vela-system
-                  source: Secret
-                provider: gcp
-                region: '[[ index .Args "GCP_REGION" ]]'
-            type: raw
+              source: Secret
+            provider: gcp
+            region: '[[ index .Args "GCP_REGION" ]]'
+        type: raw
         status: {}
-    status:
-      observedGeneration: 0
 kind: ConfigMap
 metadata:
   annotations:
