--- a/charts/vela-core/templates/defwithtemplate/export2secret.yaml
+++ b/charts/vela-core/templates/defwithtemplate/export2secret.yaml
@@ -23,7 +23,7 @@ spec:
         			type: parameter.type
         		}
         		metadata: {
-        			name: parameter.name
+        			name: parameter.secretName
         			if parameter.namespace != _|_ {
         				namespace: parameter.namespace
         			}
@@ -36,7 +36,7 @@ spec:
         }
         parameter: {
         	// +usage=Specify the name of the secret
-        	name: string
+        	secretName: string
         	// +usage=Specify the namespace of the secret
         	namespace?: string
         	// +usage=Specify the type of the secret
