--- a/charts/vela-minimal/templates/defwithtemplate/export2config.yaml
+++ b/charts/vela-minimal/templates/defwithtemplate/export2config.yaml
@@ -20,7 +20,7 @@ spec:
         		apiVersion: "v1"
         		kind:       "ConfigMap"
         		metadata: {
-        			name: parameter.name
+        			name: parameter.configName
         			if parameter.namespace != _|_ {
         				namespace: parameter.namespace
         			}
@@ -33,7 +33,7 @@ spec:
         }
         parameter: {
         	// +usage=Specify the name of the config map
-        	name: string
+        	configName: string
         	// +usage=Specify the namespace of the config map
         	namespace?: string
         	// +usage=Specify the data of config map
