--- a/docs/examples/workflow/export2config/app.yaml
+++ b/docs/examples/workflow/export2config/app.yaml
@@ -25,4 +25,4 @@ spec:
           - from: status
             parameterKey: data.serverstatus
         properties:
-          name: my-configmap
+          configName: my-configmap
