--- a/.github/workflows/issue-commands.yml
+++ b/.github/workflows/issue-commands.yml
@@ -25,7 +25,7 @@ jobs:
 
   backport:
     runs-on: ubuntu-18.04
-    if: github.event.issue.pull_request && startsWith(github.event.comment.body, '/backport')
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/backport')
     steps:
       - name: Extract Command
         id: command
