--- a/charts/vela-core/templates/addons/terraform.yaml
+++ b/charts/vela-core/templates/addons/terraform.yaml
@@ -23,7 +23,7 @@ data:
           chart: terraform-controller
           repoType: helm
           url: https://charts.kubevela.net/addons
-          version: 0.1.19
+          version: 0.2.4
         type: helm
       - name: alibaba-ack
         properties:
@@ -455,7 +455,7 @@ data:
                     value = var.password
                   }
                   output "DB_PORT" {
-                    value = 3306
+                    value = "3306"
                   }
                   output "DB_HOST" {
                     value = azurerm_mariadb_server.example.fqdn
