--- a/vela-templates/addons/auto-gen/terraform.yaml
+++ b/vela-templates/addons/auto-gen/terraform.yaml
@@ -20,7 +20,7 @@ spec:
       chart: terraform-controller
       repoType: helm
       url: https://charts.kubevela.net/addons
-      version: 0.1.19
+      version: 0.2.4
     type: helm
   - name: alibaba-ack
     properties:
@@ -452,7 +452,7 @@ spec:
                 value = var.password
               }
               output "DB_PORT" {
-                value = 3306
+                value = "3306"
               }
               output "DB_HOST" {
                 value = azurerm_mariadb_server.example.fqdn
