--- a/.github/workflows/apiserver-test.yaml
+++ b/.github/workflows/apiserver-test.yaml
@@ -5,11 +5,13 @@ on:
     branches:
       - master
       - release-*
+      - apiserver
   workflow_dispatch: {}
   pull_request:
     branches:
       - master
       - release-*
+      - apiserver
 
 env:
   # Common versions
